2007-12-07  Murray Cumming  <murrayc@murrayc.com>

	* AUTHORS: Corrected this.
	* TODO: Removed this.

2007-12-05  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/clutter-tut.xml: Introduction: Mention that both 
	OpenGL or OpenGL ES may be used as the backend.

2007-12-05  Murray Cumming  <murrayc@murrayc.com>

	* configure.ac:
	* docs/tutorial/clutter-tut.xml:
	* examples/Makefile.am:
	* examples/custom_actor/Makefile.am:
	* examples/custom_actor/main.c:
	* examples/custom_actor/triangle_actor.c:
	* examples/custom_actor/triangle_actor.h: Added a custom actor 
	example by copying and simplifying ClutterRectangle. Described 
	the implementation. Still need to actually make it paint a 
	triangle though.

2007-12-05  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/clutter-tut.xml: Behaviours: Mention that the 
	alpha callback will need to discover the timeline current and total 
	frames.
	Timelines: Give hints about the duration of a timeline.
	Mention unrefing of behaviours and timelines.
	* examples/behaviour/main.c: (on_alpha): Use the timeline. Now this 
	makes more sense.

2007-12-05  Murray Cumming  <murrayc@murrayc.com>

	* examples/full_example/main.c: Made this slightly more useful, 
	trying to make a clicked image rotate to the front. 
	But clutter_behaviour_ellipse_set_angle_end() does not seem to 
	have the desired effect.

2007-12-05  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/clutter-tut.xml: Introduction: 
	Mention that the examples are mostly unimpressive visually,
	on purpose, but that the full example should be more impressive.
	* configure.ac:
	* examples/Makefile.am:
	* examples/full_example/Makefile.am:
	* examples/full_example/README:
	* examples/full_example/images/
	* examples/full_example/main.c: Added the beginnings of a 
	very simple image browser.

2007-12-05  Murray Cumming  <murrayc@murrayc.com>

	* Makefile_web.am_fragment: Add an html upload location on 
	openismus.com for now.