@@ -111,6 +111,7 @@ AC_OUTPUT([
     examples/custom_actor/Makefile
     examples/behaviour/Makefile
     examples/container/Makefile
+    examples/effects/Makefile
     examples/full_example/Makefile
       examples/full_example/images/Makefile
     examples/stage/Makefile
