@@ -3,6 +3,7 @@
 "http://www.oasis-open.org/docbook/xml/4.1.2/docbookx.dtd" [
  <!ENTITY path_examples_base "../../examples">
  <!ENTITY clutter "<application>Clutter</application>">
+ <!ENTITY clutterversion "0.6">
  <!ENTITY gtk "<application>GTK+</application>">
  <!ENTITY url_figures_base "../figures/">
  <!ENTITY url_examples_base "../../../examples/">
@@ -68,7 +69,8 @@ name
 understanding of C, and how to create C programs.
 </para>
 
-<para>This book attempts to explain key &clutter; concepts and introduce some of the more commonly used user interface elements (&quot;actors&quot;). For full API information you should follow the links into the reference documentation.</para>
+<para>This book attempts to explain key &clutter; concepts and introduce some of the more commonly used user interface elements (&quot;actors&quot;). For full API information you should follow the links into the reference documentation. 
+This document covers the API in &clutter; version &clutterversion;.</para>
 
 <para>Each chapter contains very simple examples. These are meant to show the use of the API rather than show an impressive visual result. 
 However, the <link linkend="sec-full-example">full example</link> should give some idea of what can be achieved with &clutter;</para>
@@ -190,8 +192,9 @@ functions are useful for the stage. For instance, call <function>clutter_actor_s
 </para>
 <para><classname>ClutterStage</classname> also implements the <classname>ClutterContainer</classname> interface, allowing it to contain 
 child actors via calls to <function>clutter_container_add()</function>.
+</para>
 <para>Call <function>clutter_main()</function> to start a main loop so that the stage can animate its contents and respond to user 
-interaction.</para>
+interaction.
 </para>
 
 <para><ulink url="&url_refdocs_base_clutter;Stage.html">Reference</ulink></para>
@@ -399,6 +402,8 @@ until you call <function>clutter_timeline_start()</function>.
 
 <para>Remember to unref the timeline when you are finished with it. Unlike actors, this does not have a &quot;floating reference&quot;.</para> 
 
+<para><ulink url="&url_refdocs_base_clutter;Timeline.html">Reference</ulink></para>
+
 <sect1 id="timeline-example"><title>Example</title>
 <para>
 The following example demonstrates the use of a timeline to rotate a rectangle around the x axis while changing its color:
@@ -415,6 +420,52 @@ The following example demonstrates the use of a timeline to rotate a rectangle a
 </sect1>
 
 </chapter>
+
+
+<chapter id="sec-effects">
+<title>Effects</title>
+
+<para>
+&clutter; provides several simple effects functions that can be used together with a timeline to change the properties of 
+a single actor over time, using a simple numeric calculation. In many cases this is a simpler way to implement animation. 
+For instance, <function>clutter_effect_fade()</function> gradually changes the opacity of an 
+actor or <function>clutter_effect_rotate_x()</function> gradually changes the rotation of an actor, calculating the opacity or 
+rotation by calling the supplied <literal>alpha</literal> callback.
+</para>
+<para>To use a clutter effect, you should first create a <classname>ClutterEffectTemplate</classname>, specifying your 
+timeline object and a <classname>ClutterAlphaFunc</classname> callback. This callback will need to call 
+<function>clutter_alpha_get_timeline</function> so it can return a value based on the timeline's current frame number 
+and total number of frames, using <function>clutter_timeline_get_current_frame</function> and 
+<function>clutter_timeline_get_n_frames</function>. Several built-in callbacks, such as 
+<function>CLUTTER_ALPHA_SINE</function>, allow you to easily specify natural movement. 
+</para>
+<para>You should then provide this <classname>ClutterEffectTemplate</classname> to one of the <function>clutter_effect</function> 
+functions, along with the actor and any extra parameters required by that function.
+</para>
+<para>However, these functions can only control one actor at a time. To control more actors, see the <link linkend="sec-behaviours">Behaviours</link> section.
+</para>
+
+<para><ulink url="&url_refdocs_base_clutter;Clutter-Effects.html">Reference</ulink></para>
+
+
+<sect1 id="effects-example"><title>Example</title>
+<para>
+The following example demonstrates the use of both a fade effect and a path effect on the same actor,
+changing a rectangle's opacity while it is moved a long a straight line:
+</para>
+
+<figure id="figure-effects">
+  <title>Behaviour</title>
+  <screenshot>
+    <graphic format="PNG" fileref="&url_figures_base;effects.png"/>
+  </screenshot>
+</figure>
+
+<para><ulink url="&url_examples_base;effects">Source Code</ulink></para>
+</sect1>
+
+</chapter>
+
 
 
 <chapter id="sec-behaviours">
