@@ -2,7 +2,7 @@ include $(top_srcdir)/Makefile_web.am_fragment
 
 figuresdir = $(clutter_docdir)/tutorial/figures
 
-figures_DATA = actors.png behaviours.png stage.png stage_widget.png timeline.png
+figures_DATA = actors.png behaviours.png effects.png stage.png stage_widget.png timeline.png
 
 EXTRA_DIST = $(figures_DATA)
 
